@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>AddPeersDlg</class>
- <widget class="QDialog" name="AddPeersDlg" >
-  <property name="geometry" >
+ <widget class="QDialog" name="AddPeersDlg">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,42 +10,39 @@
     <height>144</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" >
+  <layout class="QVBoxLayout">
    <item>
-    <widget class="QLabel" name="label_3" >
-     <property name="text" >
+    <widget class="QLabel" name="label_3">
+     <property name="text">
       <string>Enter the IP address or hostname and port number of the peer you wish to add:</string>
      </property>
-     <property name="wordWrap" >
+     <property name="wordWrap">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
+    <layout class="QHBoxLayout">
      <item>
-      <layout class="QHBoxLayout" >
+      <layout class="QHBoxLayout">
        <item>
-        <widget class="QLabel" name="label_2" >
-         <property name="text" >
+        <widget class="QLabel" name="label_2">
+         <property name="text">
           <string>Peer:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="m_ip" >
-         <property name="toolTip" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'OpenSymbol'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">The IP address or hostname of the peer you want to connect to, should be put here.&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Note:&lt;/span> We accept both IPv4 and IPv6 addresses&lt;/p>&lt;/body>&lt;/html></string>
+        <widget class="QLineEdit" name="m_ip">
+         <property name="toolTip">
+          <string>&lt;p&gt;The IP address or hostname of the peer you want to connect to, should be put here.&lt;/p&gt;
+&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Note:&lt;/span&gt; We accept both IPv4 and IPv6 addresses&lt;/p&gt;
+</string>
          </property>
-         <property name="text" >
+         <property name="text">
           <string>127.0.0.1</string>
          </property>
         </widget>
@@ -52,29 +50,29 @@ p, li { white-space: pre-wrap; }
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" >
+      <layout class="QHBoxLayout">
        <item>
-        <widget class="QLabel" name="label" >
-         <property name="text" >
+        <widget class="QLabel" name="label">
+         <property name="text">
           <string>Port:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QSpinBox" name="m_port" >
-         <property name="minimumSize" >
+        <widget class="QSpinBox" name="m_port">
+         <property name="minimumSize">
           <size>
            <width>50</width>
            <height>0</height>
           </size>
          </property>
-         <property name="minimum" >
+         <property name="minimum">
           <number>1</number>
          </property>
-         <property name="maximum" >
+         <property name="maximum">
           <number>65535</number>
          </property>
-         <property name="value" >
+         <property name="value">
           <number>6881</number>
          </property>
         </widget>
@@ -84,20 +82,20 @@ p, li { white-space: pre-wrap; }
     </layout>
    </item>
    <item>
-    <widget class="Line" name="line" >
-     <property name="orientation" >
+    <widget class="Line" name="line">
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
+    <layout class="QHBoxLayout">
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -106,15 +104,15 @@ p, li { white-space: pre-wrap; }
       </spacer>
      </item>
      <item>
-      <widget class="KPushButton" name="m_add" >
-       <property name="text" >
+      <widget class="KPushButton" name="m_add">
+       <property name="text">
         <string>Add</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="KPushButton" name="m_close" >
-       <property name="text" >
+      <widget class="KPushButton" name="m_close">
+       <property name="text">
         <string>Close</string>
        </property>
       </widget>
@@ -127,7 +125,7 @@ p, li { white-space: pre-wrap; }
   <customwidget>
    <class>KPushButton</class>
    <extends>QPushButton</extends>
-   <header location="global" >kpushbutton.h</header>
+   <header>kpushbutton.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
