@@ -31,10 +31,7 @@
        <item>
         <widget class="KPushButton" name="m_recreate">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'OpenSymbol'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;They are no longer there, recreate them.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>They are no longer there, recreate them.</string>
          </property>
          <property name="text">
           <string>Recreate</string>
@@ -44,10 +41,7 @@ p, li { white-space: pre-wrap; }
        <item>
         <widget class="KPushButton" name="m_dnd">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'OpenSymbol'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Do not download the missing files.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>Do not download the missing files.</string>
          </property>
          <property name="text">
           <string>Do Not Download</string>
@@ -57,10 +51,7 @@ p, li { white-space: pre-wrap; }
        <item>
         <widget class="KPushButton" name="m_select_new">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'OpenSymbol'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The files have been moved to another location, select the new location.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>The files have been moved to another location, select the new location.</string>
          </property>
          <property name="text">
           <string>Select New Location</string>
@@ -83,10 +74,7 @@ p, li { white-space: pre-wrap; }
        <item>
         <widget class="KPushButton" name="m_cancel">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'OpenSymbol'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Cancel, do not start the torrent.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>Cancel, do not start the torrent.</string>
          </property>
          <property name="text">
           <string>Cancel</string>
