@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>409</width>
+    <width>427</width>
     <height>423</height>
    </rect>
   </property>
@@ -123,10 +123,7 @@
       <item>
        <widget class="QCheckBox" name="kcfg_openMultipleTorrentsSilently">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Bitstream Vera Sans'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;When you select multiple torrents to be opened at the same time, open them silently.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>When you select multiple torrents to be opened at the same time, open them silently.</string>
         </property>
         <property name="text">
          <string>Open multiple torrents silently</string>
@@ -136,11 +133,7 @@ p, li { white-space: pre-wrap; }
       <item>
        <widget class="QCheckBox" name="kcfg_openAllTorrentsSilently">
         <property name="toolTip">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'OpenSymbol'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Bitstream Vera Sans';&quot;&gt;Open all torrents silently.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>Open all torrents silently.</string>
         </property>
         <property name="text">
          <string>Open all torrents silently</string>
@@ -150,10 +143,7 @@ p, li { white-space: pre-wrap; }
       <item>
        <widget class="QCheckBox" name="kcfg_suppressSleep">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Bitstream Vera Sans'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Prevent computer from going into a sleep state when torrents are running.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>Prevent computer from going into a sleep state when torrents are running.</string>
         </property>
         <property name="text">
          <string>Suppress sleep when torrents are running</string>
@@ -163,13 +153,8 @@ p, li { white-space: pre-wrap; }
       <item>
        <widget class="QCheckBox" name="kcfg_autoRenameSingleFileTorrents">
         <property name="toolTip">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Rename a single file torrent with the name of its only file. &lt;/p&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If for example the file is named &lt;span style=&quot; font-weight:600;&quot;&gt;linux-desktop.iso&lt;/span&gt;, the torrent will be displayed as &lt;span style=&quot; font-weight:600;&quot;&gt;linux-desktop.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;p&gt;Rename a single file torrent with the name of its only file. &lt;/p&gt;
+&lt;p&gt;If for example the file is named &lt;span style=&quot; font-weight:600;&quot;&gt;linux-desktop.iso&lt;/span&gt;, the torrent will be displayed as &lt;span style=&quot; font-weight:600;&quot;&gt;linux-desktop.&lt;/span&gt;&lt;/p&gt;</string>
         </property>
         <property name="text">
          <string>Rename single file torrents with the name its only file</string>
