@@ -9,6 +9,7 @@ Changes in 4.3:
 - Show torrent count next to group in GroupView (176173)
 - Add new GroupSwitcher widget
 - Add edit group policy button to GroupSwitcher
+- Remove html tooltips from ui files
 
 Changes in 4.2.1:
 - Fix IP filter widget list not getting registered at startup (281245)
